# synthfuse

./: README.md  boom.sh  pyproject.toml
.github/workflows/: bench.yml  ci.yml  release.yml
benchmarks/: run_speed_test.py
retrain/: LICENSE  README.md  requeriments.txt  setup.py
retrain/examples/: basic_usage.py
retrain/experiments/: run_experiment.py
retrain/src/retraining_manifold/: base.py  selector.py
retrain/src/retraining_manifold/deterministic/: wsft.py
retrain/src/retraining_manifold/diffuse/: til.py
retrain/src/retraining_manifold/geometry/: optimal_transport.py
retrain/tests/: test_deterministic.py
synthfuse/: __init__.py  mixture_of_experts.py  moe_svr.py
tests/: test_mixture_of_svr_experts.py  tests_integrations.py  tests_synthfuse.py
