[project]
name = "synthfuse"
# ... metadata ...
dependencies = [
    "jax>=0.4.20",
    "optax>=0.1.7",
    # other dependencies...
]

[project.optional-dependencies]
# For CUDA 12.x (The modern standard)
gpu-cuda12 = [
    "jax[cuda12_pip]"
]
# For CUDA 11.x (Legacy/Older Enterprise servers)
gpu-cuda11 = [
    "jax[cuda11_pip]"
]
